--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,58 +1,23 @@
 .place__paragraphs {
     max-width: 484px;
-    margin: 48px 148px 40px 0px;
+    padding: 48px 0px 0px 0px;
 }
 
-@media screen and (max-width: 1200px) {
-
-    /*1200 вместо 1024*/
+@media screen and (max-width: 1024px) {
     .place__paragraphs {
-        margin-right: 32px;
-        /*выходит за рамки блока*/
         max-width: 456px;
     }
 }
-
-@media screen and (max-width: 1000px) {
-
-    /*вместо 768 1000px*/
+@media screen and (max-width: 950px) {
+    /*950 вместо 768*/
     .place__paragraphs {
-        margin-right: 24px;
         max-width: 352px;
     }
 }
-
-/*только с фиксированной шириной в мною созданных промежутых брекпоинтах с 320px до 700 не торчит текст из блока, поэтому нет скролла*/
-@media screen and (max-width: 700px) {
-
-    /*мой промежуточный*/
-    .place__paragraphs {
-        margin-right: 0px;
-        margin-left: 0px;
-        max-width: 210px;
-    }
-}
-
-@media screen and (max-width: 450px) {
-
-    /*мой промежуточный*/
-    .place__paragraphs {
-        margin-right: 0px;
-        margin-left: 0px;
-        max-width: 140px;
-    }
-}
-
 @media screen and (max-width: 320px) {
-
-    /*500 вместо 320*/
-    /*все равно скрол*/
-    /*текст не встает под картинку*/
     .place__paragraphs {
         max-width: 288px;
-        margin-top: 32px;
-        margin-right: 16px;
-        margin-left: 16px;
+        padding-top: 32px;
         font-size: 16px;
         line-height: 163%;
     }
