--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,16 +1,11 @@
 .place__url-heading {
     position: relative;
     max-width: 456px;
-    /*все равно дефтулзы показывают меньше*/
-    margin-top: 0px;
-    /*margin-right: 176px;*/
-    margin-bottom: 0px;
-    /*margin-left: 40px;*/
+    margin: 0px;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 12px;
-    /* identical to box height, or 100% */
     letter-spacing: 2px;
     color: #AAAAAA;
 }
