--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -2,8 +2,8 @@
     max-width: 284px;
     min-height: 213px;
     display: inline-grid;
-    margin-right: 48px;
-    margin-left: 48px;
+    margin: 0px;
+    padding: 0px;
 }
 
 @media screen and (max-width: 1024px) {
