--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,24 @@
 .intro {
     margin: 0;
+    /*1280 - отступы по 48*/
+    max-width: 1184px;
+}
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        /*1024 - отступы по 48*/
+        max-width: 928px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .intro {
+        /*768 - отступы по 24*/
+        max-width: 720px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .intro {
+        /*320 - отступы по 16*/
+        max-width: 288px;
+    }
 }
