--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,9 +3,9 @@
     max-width: 158px;
     /*текст в одну строку встал*/
     white-space: nowrap;
-    margin-top: 8px;
-    margin-bottom: 0px;
-    margin-left: 148px;
+    margin: 0px;
+    /*148 - 48 lead*/
+    padding: 8px 0px 0px 100px;
     font-style: normal;
     font-weight: 400;
     font-size: 10px;
@@ -17,16 +17,16 @@
 }
 @media screen and (max-width: 1024px) {
     .lead__caption {
-        margin-left: 48px;
+        padding-left: 0px;
     }
 }
 @media screen and (max-width: 768px) {
     .lead__caption {
-        margin-left: 24px;
+        padding-left: 24px;
     }
 }
 @media screen and (max-width: 320px) {
     .lead__caption {
-        margin-left: 16px;
+        padding-left: 16px;
     }
 }
