--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,10 +1,9 @@
 .lead__title {
     position: relative;
     max-width: 720px;
-    margin-top: 0px;
-    margin-right: 280px;
-    margin-bottom: 0px;
-    margin-left: 280px;
+    margin: 0px;
+    /*280 отступ - 48 отступ у lead*/
+    padding: 0px 232px 0px 232px;
     font-style: normal;
     font-weight: 900;
     font-size: 96px;
@@ -15,24 +14,32 @@
 
 @media screen and (max-width: 1024px) {
     .lead__title {
-        margin-right: 152px;
-        margin-left: 152px;
+        /*152 - 48 у lead*/
+        padding-right: 104px;
+        padding-left: 104px;
     }
 }
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
+    /*900 вместо 768*/
     .lead__title {
-        margin-right: 24px;
-        margin-left: 24px;
+        padding-right: 24px;
+        padding-left: 24px;
     }
 }
-
+@media screen and (max-width: 760px) {
+    .lead__title {
+        /*мой промежуточный*/
+        font-size: 42px;
+        line-height: 46px;
+    }
+    
+}
 @media screen and (max-width: 320px) {
     .lead__title {
         max-width: 288px;
         /*не правильно показаны пропорции ОШИБКА*/
-        margin-right: 16px;
-        margin-left: 16px;
+        padding-right: 16px;
+        padding-left: 16px;
         font-size: 40px;
         line-height: 44px;
     }
