--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,52 +1,27 @@
-/* сделать их на уровне лого */
 .header__lang-link {
-    /*на 1024пх поплыли*/
     position: relative;
     max-width: 30px;
-    margin-top: 46px;
-    margin-left: 931px;
-    margin-bottom: 0px;
-    padding-left: 0px;
-    /*отступ от лого + встал в одну строку с ним*/
+    margin: 0px;
+    padding: 0px 0px 0px 18px;
     border-radius: 0px;
-    /*синим горит почему-то если делать списком*/
     color: #FFFFFF;
     font-size: 24px;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0em;
     text-align: right;
-    /*list-style-type: none;*/
 }
     .header__lang-link:hover {
         /*при наведении мышки*/
+        /*прозрачность*/
         opacity: 0.5;
-        /*полупрозрачная ссылка*/
-        transition: 1s;
         /*плавный переход*/
+        transition: 1s;
     }
 
-@media screen and (max-width: 1250px) {
-    /*чтобы не было скрола вместо 1024px 1250 стоит*/
+@media screen and (max-width: 320px) {
     .header__lang-link {
-        margin-left: 675px;
-    }
-}
-@media screen and (max-width: 1000px) {
-    /*чтобы не было скрола вместо 768px 900 стоит*/
-    .header__lang-link {
-        margin-left: 467px;
-    }
-}
-/*321px - 344px скролл*/
-@media screen and (max-width: 750px) {
-    /*750 вместо 320*/
-    .header__lang-link {
-        /*опять ниже нужного стоит ОШИБКА*/
         max-width: 22px;
-        /* удалить max-height: 20px;*/
-        margin-top: 30px;
-        margin-left: 84px;
         font-size: 18px;
         line-height: 20px;
     }
@@ -54,15 +29,12 @@
 
 .header__lang-link:last-child {
     max-width: 29px;
-    margin-left: 18px;
-    /* переносится на строку вниз почему-то margin-right: 48px;*/
     text-decoration: none;
 }
 
 @media screen and (max-width: 320px) {
     .header__lang-link:last-child {
         max-width: 22px;
-        /* удалить max-height: 20px;*/
         margin-top: 30px;
         font-size: 18px;
         line-height: 20px;
