--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,21 +1,23 @@
 .header__logo {
     position: relative;
     max-width: 176px;
-    margin-top: 28px;
-    /*margin-bottom: 56px; если добавить то линки ниже лого встают*/
-    margin-left: 48px;
+    margin: 0px;
+    padding: 28px 0px 0px 0px;
     background: #2A2C2F;
   }
   
   @media screen and (max-width: 768px) {
     .header__logo {
-      margin-left: 24px;
+      /*24 - 24 отступ у header*/
+      padding-left: 0px;
     }
   }
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 350px) {
+    /*350 вместо 320 чтоб не было скролла*/
     .header__logo {
         max-width: 142px;
-        margin-top: 16px;
-        margin-left: 16px;
+        /*16 - 16 отступ у header*/
+        padding-top: 16px;
+        padding-left: 0px;
     }
   }
