без скролла страницa

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -19,7 +19,8 @@
         transition: 1s;
     }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 370px) {
+    /*370 вместо 320*/
     .header__lang-link {
         max-width: 22px;
         font-size: 18px;
