--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -34,7 +34,8 @@
     }
     
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 370px) {
+    /*370 вместо 320*/
     .lead__title {
         max-width: 288px;
         /*не правильно показаны пропорции ОШИБКА*/
